gloo/gloo-vs-client-fetch.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: client-fetch-auth0-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'client-fetch.glootest.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-client-fetch-8080
            namespace: gloo-system
      options:
        extauth:
          configRef:
            name: client-fetch-auth0-ac
            namespace: gloo-system
