gloo/gloo-vs-ui.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-ui-auth0-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'ui.glootest.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-httpbin-ui-8081
            namespace: gloo-system
    options:
      extauth:
        configRef:
          name: ui-auth0-ac
          namespace: gloo-system
    #   headerManipulation:
    #     requestHeadersToRemove:
    #     - "cookie"
    #   jwt:
    #     providers:
    #       auth0:
    #         issuer: https://dev-98l3ihxy.us.auth0.com/
    #         tokenSource:
    #           headers:
    #           - header: Jwt
    #         claimsToHeaders:
    #         - claim: email
    #           header: x-solo-claim-email
    #         jwks:
    #           remote:
    #             url: https://dev-98l3ihxy.us.auth0.com/.well-known/jwks.json
    #             upstreamRef:
    #               name: auth0-jwks-upstream
    #               namespace: gloo-system
